--- a/index.html
+++ b/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <nav>
+        <ul>
+            <li>
+                <a href="#">Inicio</a>
+            </li>
+        </ul>
+    </nav>
 </body>
 </html>
